# Arcane-Ascension-Puzzle-Spires

./: .gitattributes  .gitignore  Audio_Design.md  CombatSystem.md  Content_Scope.md  Formulas_and_Effects.md  GameMechanics.md  Game_Design_Document.md  Narrative_and_World_Bible.md  Puzzle_Board_Mechanics.md  Quests_and_Encounters.md  SFML-3.0.20mingw-FileList.txt  SpireDesign.md  Technical_Data_Structures.md  Treasure.md  UI_and_UX_Flow.md  attunement.md  items.md  judgement.md  manor.md  monster.md  player.md  progression.md
VerticalSlice/: .gitignore  BUILD_ENVIRONMENT.md  CMakeLists.txt  JUDGEMENT_IMPLEMENTATION_PLAN.md  NEXT_STEPS.md  PCH_REFACTORING_LOG.md  README.md
VerticalSlice/data/: attunements.json  floor1.json  monster.json  spells.json  trial_control.json  trial_haste.json  trial_power.json
VerticalSlice/src/: Board.cpp  Board.h  Constants.h  DataManager.cpp  DataManager.h  Game.cpp  Game.h  Gem.h  GemSubType.h  GemType.h  Judgement.h  Monster.cpp  Monster.h  PCH.h  Player.cpp  Player.h  PrimaryGemType.h  SpireData.h  StringUtils.cpp  StringUtils.h  Structs.h  UIManager.cpp  UIManager.h  main.cpp
VerticalSlice/tools/asset_generator/: generate_assets.cpp
VerticalSlice/tools/spire_generator/: floor1.json  floor30.json  floor5.json  generate_spire.cpp
VerticalSlice/tools/spire_reader/: read_spire.cpp
